# atomquest

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  restart.ps1  statement.txt
.github/workflows/: ci.yml  release.yml
apps/backend/: Dockerfile  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial.py
apps/backend/app/: main.py
apps/backend/app/api/routers/: admin.py  ai.py  analytics.py  audit.py  auth.py  chat.py  config.py  files.py  health.py  recordings.py  sessions.py  stream.py  transcripts.py
apps/backend/app/core/: config.py  deps.py  enums.py  events.py  metrics.py  redis_client.py  security.py  telemetry.py
apps/backend/app/db/: base.py  seed.py  session.py
apps/backend/app/models/: __init__.py
apps/backend/app/realtime/: gateway.py
apps/backend/app/schemas/: __init__.py
apps/backend/app/services/: ai_service.py  analytics_service.py  audit_service.py  auth_service.py  chat_service.py  config_service.py  file_service.py  recording_service.py  session_service.py  storage_service.py  transcript_service.py
apps/backend/tests/: conftest.py  test_rbac.py  test_security.py
apps/media/: Dockerfile  package.json  tsconfig.json  whisper_worker.py
apps/web/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  schema.sql
docs/diagrams/: 01-system-context.mmd  02-container-topology.mmd  README.md  (+7 more)
scripts/: quickstart.sh
(+71 files in other folders)
